feat: mudando as rotas GET/api para ter paginação
