# controllers/autorController.js
@@ -11,13 +11,32 @@ exports.createAutor = async (req, res) => {
   }
 };
 
-//Ler autores
+// Listar autores com paginação
 exports.getAutores = async (req, res) => {
   try {
-    const autores = await Autor.find();
-    res.status(200).json(autores);
-  } catch (err) {
-    res.status(400).json({ error: err.message });
+    let { limite, pagina } = req.query;
+
+    limite = parseInt(limite) || 10;
+    pagina = parseInt(pagina) || 1;
+    const allowedLimits = [5, 10, 30];
+
+    if (!allowedLimits.includes(limite)) {
+      limite = 10;
+    }
+
+    const skip = (pagina - 1) * limite;
+    const autores = await Autor.find().skip(skip).limit(limite);
+    const totalAutores = await Autor.countDocuments();
+
+    res.json({
+      page: pagina,
+      limit: limite,
+      total: totalAutores,
+      autores: autores,
+    });
+    
+  } catch (error) {
+    res.status(500).json({ message: 'Erro ao listar clientes', error });
   }
 };
 
